--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "@use-it/interval": "^0.1.3",
+    "avataaars": "^1.2.1",
     "date-fns": "^2.12.0",
     "emotion-theming": "^10.0.27",
     "faker": "^4.1.0",
@@ -22,8 +23,7 @@
     "react-scripts": "3.4.1",
     "typescript": "^3.8.3",
     "use-immer": "^0.4.0",
-    "uuid": "^7.0.3",
-    "yaml.macro": "^0.1.1"
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
     "@types/date-fns": "^2.6.0",
