--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-markdown": "^4.3.1",
     "react-scripts": "3.4.1",
     "typescript": "^3.8.3",
     "use-immer": "^0.4.0",
